# Haven-A-Distributed-Workspace-Reservation-Platform

./: .clang-format  .clang-tidy  .docker.ignore  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  vcpkg.json
api/: haven-api-v1.yaml
apps/server/: CMakeLists.txt  main.cpp
cmake/: HavenCompilerOptions.cmake
docs/: 00-introduction.md  01-requirements.md  02-high-level-design.md  03-low-level-design.md  04-domain-model.md  05-api-design.md  06-database-design.md  07-event-driven-design.md  08-concurrency.md  09-caching.md  10-security.md  11-observability.md  12-testing.md  13-performance.md  14-deployment.md
docs/15-architecture-decisions/: ADR-001-ModularMonolith.md  ADR-002-Couchbase.md  ADR-003-Drogon.md  ADR-004-OptimisticLocking.md  ADR-005-Kafka.md  ADR-006-Redis.md  ADR-007-JWT-Authentication.md  ADR-008-Transactional-Outbox.md
docs/diagrams/: architecture.drawio  class.drawio  deployment.drawio  sequence.drawio  state.drawio
docs/raw_designs/: Phase0-Udesrstanding_the_ product.txt  Phase1-HLD.txt  Phase2-LLD.txt
include/haven/bootstrap/: configuration.hpp
include/haven/logging/: log_level.hpp  logger.hpp  logging.hpp  scope_trace.hpp
include/haven/presentation/health/: live_controller.hpp  live_response.hpp
scripts/: bootstrap-vcpkg.sh
src/bootstrap/: CMakeLists.txt  configuration.cpp
src/logging/: CMakeLists.txt  logger.cpp  scope_trace.cpp
src/presentation/: CMakeLists.txt
src/presentation/health/: live_controller.cpp  live_response.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/bootstrap/: CMakeLists.txt  configuration_test.cpp
tests/unit/logging/: CMakeLists.txt  logging_test.cpp
tests/unit/presentation/: CMakeLists.txt
tests/unit/presentation/health/: CMakeLists.txt  live_controller_test.cpp  live_response_test.cpp  main.cpp
